feat: edit packname

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/icon_g_gmail"
+        android:icon="@drawable/icon_tow"
         android:label="@string/falilname"
-        android:roundIcon="@drawable/icon_g_gmail"
+        android:roundIcon="@drawable/icon_tow"
         android:supportsRtl="true"
         android:theme="@style/Theme.T432Locad"
         tools:replace="android:fullBackupContent,android:dataExtractionRules"
